spacing issues
uuugh.

--- a/eww/bar/eww.scss
+++ b/eww/bar/eww.scss
@@ -330,7 +330,7 @@ tooltip {
 }
 
 .weatha {
-	font-size: 15px;
+	font-size: 13px;
 	font-weight: bold;
 	color: $color9;
 	border-radius: 5px;
@@ -338,7 +338,7 @@ tooltip {
 }
 
 .nvidia {
-	font-size: 15px;
+	font-size: 13px;
 	font-weight: bold;
 	color: $color13;
 	border-radius: 5px;
@@ -353,7 +353,7 @@ tooltip {
 	padding-left: 6px;
 }
 .time {
-	font-size: 25px;
+	font-size: 20px;
 	font-weight: bold;
 	color: $color13;
 	border-radius: 10px;
@@ -407,7 +407,7 @@ calendar.highlight {
 	color: $blue;
 }
 .function-box {
-	font-size: 32px;
+	font-size: 16px;
 	color: $color1;
 	// padding-bottom: 10px;
 }
